Edited overall look
Got the look closer to what I'm going for

--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
             </nav>
         </div>
         <div class="content">
-            <div id="home" class="section">
-                <img src="images/graphic-rainbow.png">
+            <section id="home" class="section">
+                <!-- <img src="images/graphic-rainbow.png"> -->
                 <div class="centered-text">
                     <h2>Hi, I'm Maggie!</h2>
-                    <p>Hello and welcome! I'm a passionate web developer dedicated to creating beautiful and functional websites. Explore my portfolio to learn more about me and my work. I'd put a little more here that isn't AI generated but maybe later. :)</p>
+                    <p>Hello and welcome! I'm a passionate web developer dedicated to creating beautiful and functional websites. Explore my portfolio to learn more about me and my work. Probably put a little more here.</p>
                 </div>
-            </div>
+            </section>
 
             <section id="about" class="section">
                 <h2>About Me</h2>
                 <p>I'm a web developer with experience in HTML, CSS, and JavaScript. I'm passionate about creating user-friendly and visually appealing websites that solve real-world problems.</p>
-                <p>My journey in web development started [Your Story Here]. Since then, I've worked on various projects and continually strive to improve my skills.</p>
             </section>
 
             <section id="projects" class="section">
