Added images and some about me info

--- a/index.html
+++ b/index.html
@@ -5,44 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 <body>
+    <button id="toggle-btn" aria-label="Toggle sidebar">
+        <i class="fa-solid fa-bars"></i>
+    </button>
+    <div id="sidebar" class="sidebar hidden">
+        <h1>Maggie Faustino</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="greeting">
+        <img src="images/clearer-background.webp" alt="" id="background-image">
+        <!-- <section id="home" class="section"> -->
+            <div class="centered-text">
+                <h2>Hi, I'm Maggie!</h2>
+                <p>Hello and welcome! I'm a passionate web developer dedicated to creating beautiful and functional websites. Explore my portfolio to learn more about me and my work. Probably put a little more here.</p>
+            </div>
+        <!-- </section> -->
+    </div>
     <div class="container">
-        <div class="sidebar">
-            <h1>Maggie Faustino</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#resume">Resume</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
         <div class="content">
-            <section id="home" class="section">
-                <!-- <img src="images/graphic-rainbow.png"> -->
-                <div class="centered-text">
-                    <h2>Hi, I'm Maggie!</h2>
-                    <p>Hello and welcome! I'm a passionate web developer dedicated to creating beautiful and functional websites. Explore my portfolio to learn more about me and my work. Probably put a little more here.</p>
-                </div>
-            </section>
-
             <section id="about" class="section">
                 <h2>About Me</h2>
-                <p>I'm a web developer with experience in HTML, CSS, and JavaScript. I'm passionate about creating user-friendly and visually appealing websites that solve real-world problems.</p>
+                <p>I'm a web developer with experience in HTML, CSS, and JavaScript. I'm passionate about creating user-friendly and visually appealing websites that solve real-world problems. In addition to my love for web development, I am deeply passionate about digital art and storytelling. I believe in the power of design to communicate ideas, evoke emotions, and create meaningful experiences. By blending my technical skills with my creative interests, I aim to craft websites that not only look great but also tell a compelling story, engaging users in unique and imaginative ways.</p>
             </section>
 
             <section id="projects" class="section">
                 <h2>My Projects</h2>
                 <div class="project">
-                    <h3>Project 1</h3>
-                    <p>Description of project 1 goes here.</p>
+                    <h3>Atlanta Food Finder Project</h3>
+                    <p>Collaborated with a team to design and develop a full-stack web application for discovering restaurants in Atlanta. The project involved building a user-friendly interface that allowed users to search for restaurants, view details such as address, cuisine type, ratings, and hours, and access an interactive map for directions. Integrated a review system for user feedback, and applied Agile methodologies to ensure efficient collaboration and project management throughout the development process.</p>
                 </div>
                 <div class="project">
-                    <h3>Project 2</h3>
-                    <p>Description of project 2 goes here.</p>
+                    <h3>Spotify Wrapped Project</h3>
+                    <p>Focuses on creating an engaging web application that generates personalized Spotify Wrapped summaries for users. The app allows users to log in via their Spotify accounts, view their music listening habits, and access colorful and detailed presentations of their musical tastes. It includes a "Spotify Heardle" game where players can guess songs from short audio snippets, offering an interactive and fun experience. Users can create accounts, save their past Spotify Wrapped data, and manage it by viewing, deleting, or accessing previous summaries. The project also incorporates a responsive user interface designed to be aesthetically pleasing and adaptable to different screen sizes, ensuring that the app provides a smooth experience across devices. Agile methodologies are applied for team collaboration, ensuring efficient project management and smooth development.</p>
                 </div>
             </section>
 
@@ -51,9 +57,15 @@
                 <div class="resume-section">
                     <h3>Education</h3>
                     <div class="resume-item">
-                        <h4>Degree Name</h4>
-                        <p>University Name, Graduation Year</p>
-                        <p>Brief description or achievements</p>
+                        <h4>Bachelor of Science in Computational Media, Concentration: Interaction Design</h4>
+                        <p>Georgia Institute of Technology, 2024-2027</p>
+                        <p>Honors Program</p>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Bachelor of Science in Computer Science</h4>
+                        <p>New Jersey Institue of Technology 2023-2024</p>
+                        <p>Albert Dorman Honors College - Full Tuition Merit Scholarship</p>
+                        <p>Cumulative GPA: 4.0/4.0</p>
                     </div>
                 </div>
                 <div class="resume-section">
