Done for the most part

--- a/index.html
+++ b/index.html
@@ -54,25 +54,29 @@
                         <h3>Atlanta Food Finder Project</h3>
                         <p>Collaborated with a team to design and develop a full-stack web application for discovering restaurants in Atlanta. The project involved building a user-friendly interface that allowed users to search for restaurants, view details such as address, cuisine type, ratings, and hours, and access an interactive map for directions. Integrated a review system for user feedback, and applied Agile methodologies to ensure efficient collaboration and project management throughout the development process.</p>
                         <div class="img-carousel">
-                            <button class="arrow left" onclick="previousImage()">&#10094;</button>
+                            <button class="arrow left">&#10094;</button>
                             <div class="image-container">
                                 <img src="images/AFF-Home.webp" alt="Atlanta Food Finder Main Image of Home">
                                 <img src="images/AFF-Map.webp" alt="Atlanta Food Finder Map">
                                 <img src="images/AFF-Summary.webp" alt="Atlanta Food Finder Summary Page">
                                 <img src="images/AFF-Login.avif" alt="Atlanta Food Finder Login Page">
                             </div>
-                            <button class="arrow right" onclick="nextImage()">&#10095;</button>
+                            <button class="arrow right">&#10095;</button>
                         </div>
                     </div>
                     <div class="project">
                         <h3>Spotify Wrapped Project</h3>
                         <p>Focuses on creating an engaging web application that generates personalized Spotify Wrapped summaries for users. The app allows users to log in via their Spotify accounts, view their music listening habits, and access colorful and detailed presentations of their musical tastes. It includes a "Spotify Heardle" game where players can guess songs from short audio snippets, offering an interactive and fun experience. Users can create accounts, save their past Spotify Wrapped data, and manage it by viewing, deleting, or accessing previous summaries. The project also incorporates a responsive user interface designed to be aesthetically pleasing and adaptable to different screen sizes, ensuring that the app provides a smooth experience across devices. Agile methodologies are applied for team collaboration, ensuring efficient project management and smooth development.</p>
                         <div class="img-carousel">
-                            <button class="arrow left" onclick="previousImage()">&#10094;</button>
+                            <button class="arrow left">&#10094;</button>
                             <div class="image-container">
-                                <p>IMAGES COMING SOON WE'RE NOT DONE WITH THE PROJECT YET!</p>
+                                <img src="images/SW-Home.png" alt="Spotify Wrapped Main Image of Home">
+                                <img src="images/SW-Generate-Wraps.png" alt="Spotify Wrapped Generate Wraps Page">
+                                <img src="images/SW-Top-Songs.png" alt="Spotify Wrapped Top Songs Page">
+                                <img src="images/SW-Top-Artists.png" alt="Spotify Wrapped Top Artists Page">
+                                <img src="images/SW-Spotify-Heardle.png" alt="Spotify Wrapped Spotify Heardle Page">
                             </div>
-                            <button class="arrow right" onclick="nextImage()">&#10095;</button>
+                            <button class="arrow right">&#10095;</button>
                         </div>
                     </div>
                     <div class="project">
@@ -93,9 +97,9 @@
                 <div class="section-title">
                     <h1>Contact Me</h1>
                 </div>
-                <p>Email: your.email@example.com</p>
-                <p>LinkedIn: linkedin.com/in/yourprofile</p>
-                <p>GitHub: github.com/yourusername</p>
+                <p>Email: <a href="mailto:maggie.faustino141@gmail.com">maggie.faustino141@gmail.com</a> </p>
+                <p>LinkedIn: <a href="https://linkedin.com/in/maggie-faustino" target="_blank">www.linkedin.com/in/maggie-faustino</a></p>
+                <p>GitHub: <a href="https://github.com/mfaustino141" target="_blank">github.com/mfaustino141</a></p>
             </section>
         </div>
     </div>
