--- a/resume.html
+++ b/resume.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Resume</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <button id="toggle-btn" aria-label="Toggle sidebar">
@@ -34,12 +37,12 @@
                     <h3>Education</h3>
                     <div class="resume-item">
                         <h4>Bachelor of Science in Computational Media, Concentration: Interaction Design</h4>
-                        <p>Georgia Institute of Technology, 2024-2027</p>
+                        <p>Georgia Institute of Technology, August 2024 - May 2027</p>
                         <p>Honors Program</p>
                     </div>
                     <div class="resume-item">
                         <h4>Bachelor of Science in Computer Science</h4>
-                        <p>New Jersey Institue of Technology 2023-2024</p>
+                        <p>New Jersey Institue of Technology September 2023 - May 2024</p>
                         <p>Albert Dorman Honors College - Full Tuition Merit Scholarship</p>
                         <p>Cumulative GPA: 4.0/4.0</p>
                     </div>
@@ -60,20 +63,45 @@
                     <h3>Campus and Community Involvement</h3>
                     <div class="resume-item">
                         <h4>Cru Club</h4>
-                        <p>DESCRIPTION HERE</p>
+                        <ul>
+                            <li>Participate in weekly prayer and Bible study sessions held every Wednesday</li>
+                            <li>Contribute to organization and coordination of large group meetings conducted every Thursday</li>
+                            <li>Collaborate with fellow members to foster a supportive and spiritual community within the Club</li>
+                        </ul>
                     </div>
                     <div class="resume-item">
                         <h4>Knit n' Crochet Club</h4>
-                        <p>DESCRIPTION HERE</p>
+                        <ul>
+                            <li>Attend weekly club meetings, actively participating in knitting and crocheting projects </li>
+                            <li>Utilize provided materials and resources to create handcrafted items, enhancing personal skills</li>
+                            <li>Offer assistance and support to fellow members, fostering a collaborative and creative environment within the club </li>
+                        </ul>
                     </div>
                     <div class="resume-item">
                         <h4>Volleyball Club</h4>
-                        <p>DESCRIPTION HERE</p>
+                        <ul>
+                            <li>Engage in daily volleyball sessions on fair-weather weekdays, enhancing teamwork and athletic skills</li>
+                            <li>Collaborate with fellow club members to organize and participate in friendly matches and tournaments</li>
+                        </ul>
                     </div>
                     <div class="resume-item">
                         <h4>Spikeball Club</h4>
-                        <p>DESCRIPTION HERE</p>
+                        <ul>   
+                            <li>Engage in competitive Spikeball matches biweekly</li>
+                            <li>Demonstrate commitment to teamwork and efficient event organization within the club</li>
+                            <li>Assist in setting up and taking down nets for club events held biweekly</li>
+                        </ul>
                     </div>
+                </div>
+                <div class="resume-section">
+                    <h3>Volunteering</h3>
+                    <h4>NJIT Print Room Staff</h4>
+                    <p>NJIT American Institute of Architecture Students</p>
+                    <ul>
+                        <li> Enhanced client satisfaction by efficiently addressing queries & managing print requests at the Print Room front desk for 90 minutes weekly</li>
+                        <li> Processed an average of 10 print transactions daily utilizing HP Printers</li>
+                        <li> Executed organization of 25 print orders utilizing Adobe Creative Suite</li>
+                    </ul>
                 </div>
                 <div class="resume-section">
                     <h3>Awards</h3>
@@ -83,6 +111,7 @@
                         <li>2023 - James Casey National Merit Scholarship recipient from UPS</li>
                     </ul>
                 </div>
+            </div>
             </section>
         </div>
     </div>
