--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="overlay"></div>
         <div class="centered-text">
             <h2>Hi, I'm Maggie!</h2>
-            <p>Hello and welcome! I'm a passionate web developer dedicated to creating beautiful and functional websites.</p>
+            <p>Hello and welcome! I'm a passionate web developer and artist dedicated to creating beautiful and functional websites.</p>
             <button id="portfolio-btn" aria-label="Explore my portfolio!" onclick="scrollToSection()">Explore my portfolio!</button>
         </div>
     </div>
@@ -42,7 +42,7 @@
                 <div class="section-title">
                     <h1>About Me</h1>
                 </div>
-                <p>I'm a web developer with experience in HTML, CSS, and JavaScript. I'm passionate about creating user-friendly and visually appealing websites that solve real-world problems. In addition to my love for web development, I am deeply passionate about digital art and storytelling. I believe in the power of design to communicate ideas, evoke emotions, and create meaningful experiences. By blending my technical skills with my creative interests, I aim to craft websites that not only look great but also tell a compelling story, engaging users in unique and imaginative ways.</p>
+                <p>I'm a web developer with experience in HTML, CSS, and JavaScript. I'm passionate about creating user-friendly and visually appealing websites that solve real-world problems. Alongside my love for web development, I have a deep passion for art and storytelling. Whether through digital illustrations or web design, I strive to blend creativity with functionality, believing in the power of art to communicate ideas, evoke emotions, and create meaningful experiences. By combining my technical skills with my artistic vision, I aim to craft websites that not only look stunning but also captivate and inspire, engaging users in memorable and imaginative ways.</p>
             </section>
 
             <section id="projects" class="section">
@@ -90,6 +90,23 @@
                             <button class="arrow right" onclick="nextImage()">&#10095;</button>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <section id="art" class="section">
+                <div class="section-title">
+                    <h1>My Art</h1>
+                </div>
+                <div id="art-container">
+                    <img src="images/art/angsty.png" alt="Angsty art of someone's bloody OC">
+                    <img src="images/art/itsuwaribito-platonic-fanart.png" alt="Cute fanart of Neya and Choza as friends">
+                    <img src="images/art/itsuwaribito-ship-fanart.png" alt="Cute fanart of Neya and Utsuho as a couple">
+                    <img src="images/art/birthday-present.png" alt="Birthday art for my sister">
+                    <img src="images/art/character-piano.png" alt="Someone's OC playing the piano">
+                    <img src="images/art/skateboard-boy.png" alt="Someone's OC riding a skateboard">
+                    <img src="images/art/water-magic.png" alt="Someone's OC using water magic">
+                    <img src="images/art/alex-female.png" alt="Alex character art as woman">
+                    <img src="images/art/alex-male.png" alt="Alex character art as man">
                 </div>
             </section>
 
